<resources>
    <string name="app_name">MarketPlace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="produducto">Produducto: </string>
    <string name="textview">TextView</string>
    <string name="usuario">Usuario: </string>
    <string name="precio">Precio:</string>
    <string name="marketplace">Marketplace</string>
    <string name="producto">Producto</string>
    <string name="usuarioView">Usuario</string>
    <string name="_0_00">0.00</string>
    <string name="precioInput">Precio</string>
    <string name="usuarioInput">Usuario</string>
    <string name="nombreInput">Nombre</string>
    <string name="button_to_create_product">button to create food</string>
    <string name="agregar">AGREGAR</string>
</resources>