<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product.newproduct.NewProductFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.example.repasoparcial.ui.product.viewmodel.ProductViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:gravity="center"
            android:background="#086464"
            android:backgroundTint="#086464">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marketplace"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16sp"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/input_product"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/nombreInput"
                android:layout_marginBottom="25sp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/input_user"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/usuarioInput"
                android:layout_marginBottom="25sp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/input_price"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/precioInput"
                android:layout_marginBottom="25sp"
                android:textColor="@color/black"
                android:autofillHints=""
                android:inputType="text" />

            <Button
                android:id="@+id/add_product"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:text="@string/agregar"
                android:layout_marginTop="16sp"
                android:backgroundTint="#08ac84"/>

        </LinearLayout>

    </LinearLayout>

</layout>